--- a/Mobile/app/src/main/res/layout/content_login.xml
+++ b/Mobile/app/src/main/res/layout/content_login.xml
@@ -32,21 +32,33 @@
             android:textSize="30sp"
             android:textColor="@android:color/black"
             android:layout_marginTop="50dp" />
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <AutoCompleteTextView
+                android:id="@+id/Login_Email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_email"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:singleLine="true"/>
+        </android.support.design.widget.TextInputLayout>
+
         <EditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/NomUtilisateur"
-            android:textColor="@android:color/black"
-            android:textSize="28sp"
-            android:hint="Nom d'utilisateur" />
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/MotPasse"
-            android:textColor="@android:color/black"
-            android:hint="Mot de passe"
-            android:textSize="28sp"
-            android:password="true" />
+            android:hint="@string/prompt_password"
+            android:imeActionId="@+id/login"
+            android:imeActionLabel="@string/action_sign_in_short"
+            android:imeOptions="actionUnspecified"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:singleLine="true"/>
+
         <Button
             android:text="Connexion"
             android:layout_width="match_parent"
