--- a/Mobile/app/src/main/res/layout/activity_order.xml
+++ b/Mobile/app/src/main/res/layout/activity_order.xml
@@ -10,23 +10,13 @@
     tools:context=".OrderActivity">
 
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="275dp"
         android:layout_height="350dp"
-        android:id="@+id/frameLayout2"
-        android:layout_below="@+id/AddBtn"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/NextBtn"></FrameLayout>
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Order_ajouter"
-        android:id="@+id/AddBtn"
+        android:id="@+id/CtnPanier"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/frameLayout2"
-        android:layout_alignEnd="@+id/frameLayout2" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/NextBtn"></FrameLayout>
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -34,7 +24,17 @@
         android:layout_height="wrap_content"
         android:text="@string/Order_Next"
         android:id="@+id/NextBtn"
+        android:onClick="NextStepClick"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/frameLayout2"
-        android:layout_alignEnd="@+id/frameLayout2" />
+        android:layout_alignRight="@+id/CtnPanier"
+        android:layout_alignEnd="@+id/CtnPanier" />
+
+    <FrameLayout
+        android:layout_width="275dp"
+        android:layout_height="350dp"
+        android:id="@+id/CtnMenu"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/NextBtn" />
 </RelativeLayout>
