--- a/Mobile/app/src/main/res/layout/content_login.xml
+++ b/Mobile/app/src/main/res/layout/content_login.xml
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btnEnregistrer"
-            android:onClick="OnClick"
+            android:onClick="SignInClick"
             android:textSize="25sp" />
         <LinearLayout
             android:orientation="horizontal"
