ajout de la toolbar et du naviagtion drawer pour pay bill et sign up

--- a/Mobile/app/src/main/res/layout/activity_pay_bill.xml
+++ b/Mobile/app/src/main/res/layout/activity_pay_bill.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/content_sign_up"
+        layout="@layout/content_pay_bill"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
