Affichage de base du fragment liste des repas

--- a/Mobile/app/src/main/res/layout/fragment_meals_list.xml
+++ b/Mobile/app/src/main/res/layout/fragment_meals_list.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/RepasNom"
-        android:layout_width="wrap_content"
+        android:gravity="left"
+        android:layout_width="152dp"
         android:layout_height="wrap_content"
-        android:text="@+id/RepasNom"
-        android:textSize="20px" >
+        android:text="RepasNom"
+        android:textSize="20sp">
     </TextView>
 
     <TextView
         android:id="@+id/RepasPrix"
-        android:layout_width="wrap_content"
+        android:gravity="right"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
-        android:text="@+id/Repas"
-        android:textSize="20px" >
+        android:text="RepasPrix"
+        android:textSize="20sp"
+        android:layout_gravity="right">
     </TextView>
 
 </LinearLayout>
