--- a/Mobile/app/src/main/res/layout-port/activity_order.xml
+++ b/Mobile/app/src/main/res/layout-port/activity_order.xml
@@ -10,7 +10,21 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/AddBtn"
         android:layout_alignParentRight="true"
-        android:layout_above="@+id/NextBtn" />
+        android:layout_above="@+id/NextBtn">
+
+
+        <ListView
+            android:layout_width="163dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/left"
+            android:layout_gravity="left|center_vertical" />
+
+        <ListView
+            android:layout_width="174dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/right"
+            android:layout_gravity="right|center_vertical" />
+    </FrameLayout>
 
     <Button
         style="?android:attr/buttonStyleSmall"
