--- a/Mobile/app/src/main/res/layout-port/activity_order.xml
+++ b/Mobile/app/src/main/res/layout-port/activity_order.xml
@@ -3,28 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:id="@+id/CtnPanier"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/AddBtn"
-        android:layout_alignParentRight="true"
-        android:layout_above="@+id/NextBtn">
-
 
         <ListView
-            android:layout_width="163dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/left"
-            android:layout_gravity="left|center_vertical" />
-
-        <ListView
-            android:layout_width="174dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/right"
-            android:layout_gravity="right|center_vertical" />
-    </FrameLayout>
+            android:id="@+id/menu"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
