layout pour choisir resto et méthode pour fill combo box
marche pas peut pas accéder au site d'un cellulaire

--- a/Mobile/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Mobile/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,7 +10,8 @@
         <item
             android:id="@+id/nav_disconnect"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Déconnexion" />
+            android:title="Déconnexion"
+            />
 
 
     </group>
