--- a/Mobile/app/src/main/res/layout-port/activity_order.xml
+++ b/Mobile/app/src/main/res/layout-port/activity_order.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,5 +53,18 @@
         android:layout_alignTop="@+id/PlusBtn"
         android:layout_toLeftOf="@+id/PlusBtn"
         android:layout_toStartOf="@+id/PlusBtn" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/BillTotal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/MinusBtn"
+        android:layout_toLeftOf="@+id/MinusBtn"
+        android:layout_toStartOf="@+id/MinusBtn" />
 
 </RelativeLayout>
