--- a/Mobile/app/src/main/res/layout/content_resto.xml
+++ b/Mobile/app/src/main/res/layout/content_resto.xml
@@ -83,6 +83,13 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal" />
 
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/Resto_Btn"
+                        android:id="@+id/btnResto"
+                        android:layout_gravity="center_horizontal" />
+
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
