--- a/Mobile/app/src/main/res/layout/fragment_meal_detail.xml
+++ b/Mobile/app/src/main/res/layout/fragment_meal_detail.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/meal_list" />
+        <include layout="@layout/content_meal_list" />
     </FrameLayout>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
