--- a/Mobile/app/src/main/res/layout/content_meal_deatil.xml
+++ b/Mobile/app/src/main/res/layout/content_meal_deatil.xml
@@ -19,6 +19,7 @@
     </android.support.v7.widget.Toolbar>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_marginTop="55dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
