--- a/Mobile/app/src/main/res/layout/content_pay_bill.xml
+++ b/Mobile/app/src/main/res/layout/content_pay_bill.xml
@@ -32,13 +32,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
-            <GridView
-                android:id="@+id/gridView"
+            <ListView
+                android:id="@+id/lstCommande"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true" />
+                android:layout_marginBottom="50dp"
+                android:drawSelectorOnTop="false"
+                android:listSelector="@android:color/darker_gray"
+                android:layout_below="@+id/AddBtn"
+                android:layout_marginTop="10dp" />
 
         </android.support.v4.widget.NestedScrollView>
 
