--- a/Mobile/app/src/main/res/layout/content_order.xml
+++ b/Mobile/app/src/main/res/layout/content_order.xml
@@ -81,9 +81,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Order_Ajouter"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_alignParentTop="true"
             android:layout_alignRight="@+id/NextBtn"
             android:layout_alignEnd="@+id/NextBtn" />
+
+        <Button
+            android:id="@+id/WaiterBtn"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Order_Waiter"
+            android:layout_marginRight="75dp"
+            android:layout_marginEnd="75dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/AddBtn"
+            android:layout_alignEnd="@+id/AddBtn" />
 
     </RelativeLayout>
 
