--- a/Mobile/app/src/main/res/layout/content_pay_bill.xml
+++ b/Mobile/app/src/main/res/layout/content_pay_bill.xml
@@ -13,53 +13,60 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".PayBillActivity"
         tools:showIn="@layout/activity_pay_bill">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/txtTotal"
+            android:textSize="40dp"
+            android:layout_weight="1"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
         <android.support.v4.widget.NestedScrollView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <ListView
-                android:id="@+id/lstCommande"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
-                android:drawSelectorOnTop="false"
-                android:listSelector="@android:color/darker_gray"
-                android:layout_below="@+id/AddBtn"
-                android:layout_marginTop="10dp" />
+            android:layout_weight="1"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="32dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="356dp">
 
         </android.support.v4.widget.NestedScrollView>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:text="Payer"
+            android:onClick="onBuyPressed"
+            android:drawableLeft="@drawable/ic_launcher"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="450dp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/Bill_Label"
+            android:id="@+id/textView3"
+            android:textSize="40dp"
+            android:layout_above="@+id/txtTotal"
+            android:layout_centerHorizontal="true" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Payer"
-                android:onClick="onBuyPressed"
-                android:drawableLeft="@drawable/ic_launcher"/>
-        </LinearLayout>
-
-
-    </LinearLayout>
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
